# brainbyte

./: .gitignore  README.md
api/: .env.example  .gitignore  Cargo.toml  README.md
api/src/: agent_client.rs  main.rs
backend/: agent.py  brainbyte.db  curator.py  llm_client.py  memory.py  requirements.txt  server.py
brainbyte-agent/: HANDOFF.md  agent.py  api_service.py  brainbyte_memory.db  memory.py
brainbyte-v2/: .env.example  brainbyte.db  requirements.txt  server.py
brainbyte-v2/web/: index.html
cms/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
cms/scripts/: seed.ts
cms/src/: payload.config.ts
cms/src/app/: layout.tsx
cms/src/app/(payload)/: layout.tsx
cms/src/collections/: Categories.ts  Facts.ts  Media.ts  Users.ts
docs/: gen_icons.py  icon_render.html
mobile/: .gitignore  App.tsx  app.json  firestore.rules  package-lock.json  package.json  tsconfig.json
mobile/android/: .gitignore  build.gradle  settings.gradle
mobile/android/app/: build.gradle
mobile/src/: api.ts  constants.ts  rust_api.ts  theme.ts  types.ts
mobile/src/components/: BottomNav.tsx  DopamineFeed.tsx  FactDetail.tsx  FocusSession.tsx  GameCard.tsx  InitialsAvatar.tsx  InteractiveLesson.tsx  InterruptOverlay.tsx  Leaderboard.tsx  Library.tsx  Onboarding.tsx  Profile.tsx  Register.tsx  SplashScreen.tsx
mobile/src/lib/: appMonitor.ts  firebase.ts  queryClient.ts
mobile/src/state/: AppState.tsx
mobile/src/store/: useAppStore.ts
mobile/stubs/react-native-worklets/: index.js  package.json
web/: index.html
(+10 files in other folders)
