[package]
name = "brainbyte-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
